--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <tr>
                         <td class="align-middle">Szoba típusa:</td>
                         <td class="text-left">
-                            <p><input type="radio">Egyágyas - 9000 Ft/éj</p>
-                            <p><input type="radio">Két ágyas - 15000 Ft/éj</p>
-                            <p><input type="radio">Kétágyas 1 pótággyal - 18000 Ft/éj</p>
-                            <p><input type="radio">Kétágyas 2 pótággyal - 20000 Ft/éj</p>
+                            <p><input type="radio" name="radio">Egyágyas - 9000 Ft/éj</p>
+                            <p><input type="radio" name="radio">Két ágyas - 15000 Ft/éj</p>
+                            <p><input type="radio" name="radio">Kétágyas 1 pótággyal - 18000 Ft/éj</p>
+                            <p><input type="radio" name="radio">Kétágyas 2 pótággyal - 20000 Ft/éj</p>
                         </td>
                     </tr>
                     <tr>
