--- a/index.html
+++ b/index.html
@@ -27,25 +27,63 @@
                     <tr>
                         <td class="align-middle">Szoba típusa:</td>
                         <td class="text-left">
-                            <p><input type="radio" name="radio">Egyágyas - 9000 Ft/éj</p>
-                            <p><input type="radio" name="radio">Két ágyas - 15000 Ft/éj</p>
-                            <p><input type="radio" name="radio">Kétágyas 1 pótággyal - 18000 Ft/éj</p>
-                            <p><input type="radio" name="radio">Kétágyas 2 pótággyal - 20000 Ft/éj</p>
+                            <p><input type="radio" name="radio"> Egyágyas - 9000 Ft/éj</p>
+                            <p><input type="radio" name="radio"> Két ágyas - 15000 Ft/éj</p>
+                            <p><input type="radio" name="radio"> Kétágyas 1 pótággyal - 18000 Ft/éj</p>
+                            <p><input type="radio" name="radio"> Kétágyas 2 pótággyal - 20000 Ft/éj</p>
                         </td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
+                        <td class="align-middle">
+                            <p>Vendégek száma:</p>
+                            <p>Vendégek életkora:</p>
+                        </td>
+                        <td class="text-left">
+                            <p>
+                                <select name="" id="">
+                                    <option value="">1</option>
+                                    <option value="">2</option>
+                                    <option value="">3</option>
+                                    <option value="">4</option>
+                                </select>
+                            </p>
+                            <p>
+                                <input type="text" maxlength="3" style="width: 6ch;"> év
+                                <input type="text" maxlength="3" style="width: 6ch;"> év
+                                <input type="text" maxlength="3" style="width: 6ch;"> év
+                                <input type="text" maxlength="3" style="width: 6ch;"> év
+                            </p>
+                        </td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
+                        <td class="align-middle">
+                            Ellátás:
+                        </td>
+                        <td class="text-left">
+                            <p><input type="checkbox" name="radio"> Reggeli - 900 Ft/fő/nap</p>
+                            <p><input type="checkbox" name="radio"> Félpanzió - 2900 Ft/fő/nap</p>
+                            <p><input type="checkbox" name="radio"> Teljes panzió - 4900 Ft/fő/nap</p>
+                        </td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
+                        <td class="align-middle">
+                            <p>Fürdő szolgáltatások:</p>
+                        </td>
+                        <td class="text-left">
+                            <p><input type="checkbox" name="radio"> Beltéri medencék - 800 Ft/fő/nap</p>
+                            <p><input type="checkbox" name="radio"> Kültéri medencék - 800 Ft/fő/nap</p>
+                            <p><input type="checkbox" name="radio"> Szauna belépő - 800 Ft/fő/nap</p>
+                            <p><input type="checkbox" name="radio"> Teljes belépő - 2000 Ft/fő/nap</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="align-middle">
+                            <p>Egyéb kérdés, kívánság:</p>
+                        </td>
+                        <td class="text-left"><textarea name="" id="" cols="40" rows="5" style="resize: none;"></textarea></td>
                     </tr>
                 </table>
+                <input type="submit" value="Költségkalkuláció">
             </form>
         </div>
     </div>
