--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="sajat.css">
     <title>Balaton Panzió</title>
+    <script src="panzio.js"></script>
 </head>
 <body>
     <div class="container">
@@ -18,19 +19,19 @@
                 <table class="table w-75 m-auto">
                     <tr>
                         <td><p>Érkezés dátuma:</p></td>
-                        <td><p>Távozás dátuma:</p></td>
+                        <td class="text-left"><input class="w-75" type="date" id="erkezes"></td>
                     </tr>
                     <tr>
-                        <td><input type="date" id="erkezes"></td>
-                        <td><input type="date" id="tavozas"></td>
+                        <td><p>Távozás dátuma:</p></td>
+                        <td class="text-left"><input class="w-75" type="date" id="tavozas"></td>
                     </tr>
                     <tr>
                         <td class="align-middle">Szoba típusa:</td>
                         <td class="text-left">
-                            <p><input type="radio" name="radio"> Egyágyas - 9000 Ft/éj</p>
-                            <p><input type="radio" name="radio"> Két ágyas - 15000 Ft/éj</p>
-                            <p><input type="radio" name="radio"> Kétágyas 1 pótággyal - 18000 Ft/éj</p>
-                            <p><input type="radio" name="radio"> Kétágyas 2 pótággyal - 20000 Ft/éj</p>
+                            <p><input type="radio" name="radio" id="EgyAgyas"> Egyágyas - 9000 Ft/éj</p>
+                            <p><input type="radio" name="radio" id="KetAgyas"> Két ágyas - 15000 Ft/éj</p>
+                            <p><input type="radio" name="radio" id="EgyAgyasPot"> Kétágyas 1 pótággyal - 18000 Ft/éj</p>
+                            <p><input type="radio" name="radio" id="KetAgyasPot"> Kétágyas 2 pótággyal - 20000 Ft/éj</p>
                         </td>
                     </tr>
                     <tr>
@@ -40,7 +41,7 @@
                         </td>
                         <td class="text-left">
                             <p>
-                                <select name="" id="">
+                                <select id="vendegszam">
                                     <option value="">1</option>
                                     <option value="">2</option>
                                     <option value="">3</option>
@@ -48,10 +49,10 @@
                                 </select>
                             </p>
                             <p>
-                                <input type="text" maxlength="3" style="width: 6ch;"> év
-                                <input type="text" maxlength="3" style="width: 6ch;"> év
-                                <input type="text" maxlength="3" style="width: 6ch;"> év
-                                <input type="text" maxlength="3" style="width: 6ch;"> év
+                                <input type="text" maxlength="3" id="e1" style="width: 6ch;"> év
+                                <input type="text" maxlength="3" id="e2" style="width: 6ch;"> év
+                                <input type="text" maxlength="3" id="e3" style="width: 6ch;"> év
+                                <input type="text" maxlength="3" id="e4" style="width: 6ch;"> év
                             </p>
                         </td>
                     </tr>
@@ -60,9 +61,9 @@
                             Ellátás:
                         </td>
                         <td class="text-left">
-                            <p><input type="checkbox" name="radio"> Reggeli - 900 Ft/fő/nap</p>
-                            <p><input type="checkbox" name="radio"> Félpanzió - 2900 Ft/fő/nap</p>
-                            <p><input type="checkbox" name="radio"> Teljes panzió - 4900 Ft/fő/nap</p>
+                            <p><input type="radio" name="ellatas" id="reggeli"> Reggeli - 900 Ft/fő/nap</p>
+                            <p><input type="radio" name="ellatas" id="felpanzio"> Félpanzió - 2900 Ft/fő/nap</p>
+                            <p><input type="radio" name="ellatas" id="teljespanzio"> Teljes panzió - 4900 Ft/fő/nap</p>
                         </td>
                     </tr>
                     <tr>
@@ -83,7 +84,7 @@
                         <td class="text-left"><textarea name="" id="" cols="40" rows="5" style="resize: none;"></textarea></td>
                     </tr>
                 </table>
-                <input type="submit" value="Költségkalkuláció">
+                <div class="text-center py-5"><input class="btn btn-primary font-weight-bold" type="button" onclick="kalkulacio()" value="Költségkalkuláció"></div>
             </form>
         </div>
     </div>
