--- a/index.html
+++ b/index.html
@@ -90,6 +90,38 @@
     </div>
     <div id="ajanlat" class="container">
         <h1 class="text-center">Ajánlat:</h1>
+        <table class="table">
+            <tr class="text-center font-weight-bold">
+                <td class="w-25"></td>
+                <td class="w-25">Megnevezés:</td>
+                <td class="w-25">1 főre:</td>
+                <td class="w-25">Összesen:</td>
+            </tr>
+            <tr>
+                <td>Szoba:</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Vendégek száma:</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Ellátás:</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Fürdő szolgáltatások:</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
